@@ -1,6 +1,7 @@
 2010-12-19  Steffen Gebert  <steffen@steffen-gebert.de>
 
 	* Follow-up to #16779: t3lib_cache_backend_RedisBackendTest causes t3lib_db_PreparedStatementTest tests to fail (Thanks to Oliver Klee)
+	* Fixed bug #16777: Test failure in t3lib_extmgmTest if tests are located in typo3_src/tests/ instead of tests/ (Thanks to Oliver Klee)
 
 2010-12-18  Susanne Moog  <typo3@susanne-moog.de>
 
